--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -289,3 +289,12 @@ on_ft = 'rust'
 hook_add = '''
 let g:rustfmt_autosave = 1
 '''
+
+[[plugins]]
+repo = 'dart-lang/dart-vim-plugin'
+
+[[plugins]]
+repo = 'thosakwe/vim-flutter'
+hook_source = '''
+let g:hot_reload_on_save=1
+'''
