--- a/deinft.toml
+++ b/deinft.toml
@@ -87,6 +87,9 @@ setlocal smartindent
 go = '''
 highlight default link goErr WarningMsg
 match goErr /\<err\>/
+setlocal tabstop=4
+setlocal softtabstop=4
+setlocal shiftwidth=4
 '''
 
 vim = '''
@@ -116,6 +119,16 @@ setlocal iskeyword+=-
 '''
 
 javascript = '''
+setlocal tabstop=2
+setlocal shiftwidth=2
+setlocal softtabstop=2
+setlocal smarttab
+setlocal expandtab
+setlocal autoindent
+setlocal smartindent
+'''
+
+typescript = '''
 setlocal tabstop=2
 setlocal shiftwidth=2
 setlocal softtabstop=2
